using UnityEngine;

[CreateAssetMenu(menuName = "Scriptable Objects/Worlds Database")]
public class WorldsDB : ScriptableObject
{
    public World[] worlds;
}